k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  type: ClusterIP   # default, can omit
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001        # service port
      targetPort: 5001  # container port
