k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: chat-app
spec:
  type: ClusterIP
  selector:
    app: mongodb   # must match your Mongo Deployment label
  ports:
    - port: 27017
      targetPort: 27017
